feat#57 :: Search 테스트 수정